--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
                 <div class="form-group">
                     <label>Válassz színt!</label>
                     <select class="form-control">
+                        <option value="0">Zöld</option>
+                        <option value="1">Kék</option>
+                        <option value="2">Narancs</option>
+                        <option value="3">Piros</option>
                     </select>
                 </div>
                 <div class="form-group mt-5">
