--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="row">
             <div class="col-md-5 keret">
                 <div id="polo">
-                    <img src="assets/images/polo-zold.png" alt="">
+                    <img src="assets/images/polo-zold.png" alt="" id="kep">
                     <p id="felirat">JÁNOSI</p>
                     <p id="sorszam">19</p>
                 </div>
@@ -26,23 +26,24 @@
             <div class="col-md-5 offset-md-2 keret jobb">
                 <div class="form-group">
                     <label>Válassz színt!</label>
-                    <select class="form-control">
-                        <option value="0">Zöld</option>
-                        <option value="1">Kék</option>
-                        <option value="2">Narancs</option>
-                        <option value="3">Piros</option>
+                    <select class="form-control" onchange="Valt(0)" id="szin">
+                        <option value="polo-zold.png">Zöld</option>
+                        <option value="polo-kek.png">Kék</option>
+                        <option value="polo-narancs.png">Narancs</option>
+                        <option value="polo-piros.png">Piros</option>
                     </select>
                 </div>
                 <div class="form-group mt-5">
                     <label>Felirat</label>
-                    <input type="text" class="form-control" value="JÁNOSI">
+                    <input type="text" class="form-control" value="JÁNOSI" onchange="Valt(1)" id="szoveg">
                 </div>
                 <div class="form-group mt-5">
                     <label>Szám</label>
-                    <input type="number"class="form-control" value="19">
+                    <input type="number"class="form-control" value="19" onchange="Valt(2)" id="szam">
                 </div>
             </div>
         </div>
     </div>
 </body>
 </html>
+<script src="assets/js/main.js"></script>
