--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </div>
                 <div class="form-group mt-5">
                     <label>Szám</label>
-                    <input type="number"class="form-control" value="19" onchange="Valt(2)" id="szam">
+                    <input type="number"class="form-control" value="19" onchange="Valt(2)" id="szam" min="1" max="99">
                 </div>
             </div>
         </div>
